<resources>
    <string name="app_name">bd</string>
    <string name="butlogin">Entrar</string>
    <string name="butregister">Registrar</string>
    <string name="hintemail">Correo</string>
    <string name="hintPass">Contraseña</string>
    <string name="hintConfirmPas">Confirmar contraseña</string>
    <string name="nav_add">Nueva cita</string>
    <string name="nav_calendar">Calendario</string>
    <string name="nav_profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtCalendarView">Citas del mes</string>
    <string name="txtservicios">SERVICIOS</string>
    <string name="butreservar">RESERVAR</string>
    <string name="txtConfirm">Confirmación reserva</string>
    <string name="txtempFC">Empleado</string>
    <string name="txtdiaFc">Fecha</string>
    <string name="txthoraFC">Hora</string>
    <string name="txtprecioFc">Precio</string>
    <string name="txtservicioFC">Servicio</string>
    <string name="txtDialogdelte">Confirma para borrar la cita</string>
    <string name="txtProfile">DATOS PERSONALES</string>
    <string name="txtdatosP">Datos principales</string>
    <string name="txtcambiarpass">Cambiar contraseña</string>
    <string name="txtnombre">Nombre</string>
    <string name="txtemail">Email</string>
    <string name="txttlfn">Teléfono</string>

</resources>